Fixed overlapping

--- a/css/style.css
+++ b/css/style.css
@@ -95,9 +95,9 @@ a {
     font-size: 28px;
     color: #f42;
   }
-  .latest-news ul {
+  /* .latest-news ul {
     margin: 20px -8px -8px -8px;
-  }
+  } */
   .latest-news li {
     height: 88px;
     border: 1px solid red;
@@ -146,7 +146,7 @@ a {
 
 footer {
   text-align: center;
-  font-size: 1.3rem;
+  font-size: 100%;
 }
 
 .links {
@@ -192,6 +192,7 @@ footer {
 
 .social-container li {
   margin: 1rem;
+  font-size: 100%;
 }
 
 .social-container a:hover {
